feat: v1.3.0 - 负载均衡、代理优化、虚拟滚动、健康检查